[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/parallax_mountain_pack/layers/parallax-mountain-bg.png" type="Texture" id=1]
[ext_resource path="res://Sprites/parallax_mountain_pack/layers/parallax-mountain-trees.png" type="Texture" id=2]
[ext_resource path="res://Sprites/parallax_mountain_pack/layers/parallax-mountain-mountains.png" type="Texture" id=3]
[ext_resource path="res://PauseMenu.gd" type="Script" id=4]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Parallax-mountain-bg" type="Sprite" parent="."]
position = Vector2( 641.25, 360.25 )
scale = Vector2( 4.7114, 4.52187 )
texture = ExtResource( 1 )

[node name="Parallax-mountain-mountains" type="Sprite" parent="Parallax-mountain-bg"]
position = Vector2( 0.0530753, 25.1555 )
scale = Vector2( 0.502146, 0.685556 )
texture = ExtResource( 3 )

[node name="Parallax-mountain-trees" type="Sprite" parent="Parallax-mountain-bg"]
position = Vector2( -0.0265322, 42.8887 )
scale = Vector2( 0.498537, 0.464927 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -34.0
margin_right = 62.5
margin_bottom = 34.0

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_right = 125.0
margin_bottom = 20.0
text = "Resume"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 125.0
margin_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 125.0
margin_bottom = 68.0
text = "Qut to Title"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
